# Agent-Quality-and-Behaviour-Validation

./: .gitignore  FINAL_DOCUMENT.md  README.md  chainlit_app.py  experiment_stage4.py  main.py  optimize_judge.py  promptfooconfig.yaml  pyproject.toml  requirements.txt  setup_langfuse_scoring.py  simulate_annotations.py  smoke_test_annotation_queue.py  smoke_test_dspy_judge.py  smoke_test_mlflow.py  smoke_test_trulens.py  stage3-report.md
api/: server.py
artifacts/: optimized_judge.json  trace_data.json
artifacts/stage1/: stage1_curated_results.json
eval/: run_evals.sh
eval/inspect_ai/: safety_eval.py
eval/inspect_ai/datasets/: adversarial_prompts.json  boundary_checks.json  harm_instructions.json
eval/promptfoo/: package.json  promptfooconfig.yaml
logs/inspect_ai/: results_sample.json
logs/promptfoo/: results_sample.json
mlruns/0/: meta.yaml
mlruns/633317712942902479/: meta.yaml
mlruns/633317712942902479/392e80a6a5a3436a9b569b17af7f9f86/: meta.yaml
mlruns/633317712942902479/392e80a6a5a3436a9b569b17af7f9f86/metrics/: curated_pass_count  curated_pass_rate  ragas_record_count
reports/: stage1-evaluation-report.md  stage1-evaluation-report_instructions.md  stage1-three-tools-empirical-report.md  stage2_red_teaming.md  stage4-trulens-mlflow-report.md  stage5-safety-report.md
retail_support/: __init__.py  app.py  config.py  data.py  dspy_judge.py  langfuse_annotations.py  runtime.py  services.py  stage1_eval.py  stage5_eval.py  stage5_inspect.py
tests/: conftest.py  test_stage1_deepeval.py  test_stage5_deepeval.py
(+6 files in other folders)
