[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "retail-support-system"
version = "0.2.0"
description = "A production-like LangChain multi-agent retail support system"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "langchain",
  "langchain-openai",
  "chainlit",
  "langfuse",
  "trulens-core>=2.7.1",
  "trulens-providers-openai>=2.7.1",
  "mlflow>=2.13",
]

[project.scripts]
retail-support = "retail_support.app:main"
