[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "retail-support-system"
version = "0.2.0"
description = "A production-like LangChain multi-agent retail support system"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "langchain",
  "langchain-openai",
  "chainlit",
  "mlflow",
  "pytest",
  "pytest-xdist",
  "deepeval",
  "ragas",
]

[project.optional-dependencies]
eval = [
  "mlflow",
  "pytest",
  "pytest-xdist",
  "deepeval",
  "ragas",
]

[project.scripts]
retail-support = "retail_support.app:main"
retail-support-stage1 = "retail_support.stage1_eval:main"
